# Ztockify

./: AAPL.h5  AAPL.keras  AMZN.h5  AMZN.keras  GOOGL.h5  GOOGL.keras  MSFT.h5  MSFT.keras  README.md  Stock_Market_Predictor.ipynb  T3STOCKS.txt  T5STOCKS.txt  TSLA.h5  TSLA.keras  app.py  pyproject.toml  requirements.txt
