[tool.poetry]
name = "ztockify"
version = "0.1.0"
description = "stock prediction app"
authors = ["Ayushman Dutta"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
altair = "^4.2.0"
pandas_datareader="^0.10.0"
numpy="^1.20.3"
pandas="^1.2.5"
keras  = "^2.8.0"
scikit_learn="^1.1.1"
tensorflow="2.8.0"
streamlit="^1.9.0"
yfinance="^0.1.70"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
