[tool.poetry]
name = "ztockify"
version = "0.1.0"
description = "stock prediction app"
authors = ["Ayushman Dutta"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "3.10.5"
altair = "4.2.0"
matplotlib="3.5.2"
pandas_datareader="0.10.0"
numpy="1.22.4"
pandas="1.4.2"
keras  = "2.9.0"
scikit_learn="1.1.1"
tensorflow="2.9.1"
yfinance="0.1.70"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
